# RPiSocket

./: .env  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  exec.sh  udp_test.py
rpisocket/: CMakeLists.txt
rpisocket/include/rpisocket/: rpisocket.hpp
rpisocket/src/: btserver.cpp  btserver.hpp  server.cpp  server.hpp  socket_exception.hpp  wifiserver.cpp  wifiserver.hpp
rpisocket/test/: CMakeLists.txt
rpisocket/test/src/: test.cpp
